--- a/MustangClientHandler/MainWindow.xaml
+++ b/MustangClientHandler/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MustangClientHandler"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="800" Loaded="Window_Loaded">
+        Title="MainWindow" Height="350" Width="800" Loaded="Window_Loaded" Closing="Window_Closing">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="37*"/>
